# vulkan-rt

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: cornell-box.blend  cornell-box.blend1  cornell-box.gltf  cube.blend  cube.blend1  cube.gltf
macros/: Cargo.toml
macros/src/: lib.rs  uniform_block.rs
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
renderer/: Cargo.toml
renderer/src/: _main.rs  array.rs  lib.rs  post.rs  renderer.rs
renderer/src/loaders/: gltf.rs  mod.rs
renderer/src/shaders/path-tracing/: camera.glsl  rand.glsl  ray.glsl  scene-bindings.glsl  texture.glsl  trace.glsl  util.glsl
renderer/src/shaders/path-tracing-hlsl/: bindings.hlsl
renderer/src/shaders/util/: denoiser.glsl  linear_to_srgb_frag.glsl
shaders/rust-shaders/: Cargo.toml
shaders/rust-shaders-common/: Cargo.toml
shaders/rust-shaders-common/src/: lib.rs
shaders/rust-shaders/src/: lib.rs
shaders/test01/: Cargo.toml  rust-toolchain
shaders/test01/src/: bsdf01.rs  common.rs  glam_macro.rs  lib.rs  rand.rs
src/: _renderer.rs  accel.rs  array.rs  buffers.rs  common.rs  dense_arena.rs  gbuffer.rs  glsl.rs  main.rs  model.rs  post.rs  render_world.rs  renderer.rs  sbt.rs  scene.rs  std140.rs  world.rs
src/loaders/: gltf.rs  mod.rs
src/res/: cube_scene.gltf  monkey.gltf  onecube_scene.mtl  room.gltf
src/res/MetalPlates012_2K-JPG/: MetalPlates012_2K-JPG.usda  MetalPlates012_2K-JPG.usdc
src/shaders/: bindings.glsl  common.glsl  diffuse_bsdf.glsl  disney_bsdf01.glsl  learnopengl_brdf.glsl  linear_to_srgb_frag.glsl  math.glsl  miss_shadow.glsl  payload.glsl  quad_vert.glsl  rand.glsl  rchit.glsl  rgen.glsl  rmiss.glsl  sampling.glsl  shadow_rmiss.glsl  test01_brdf.glsl  test02_bsdf.glsl  test03_bsdf.glsl  test04_bsdf.glsl  utils.glsl  warp.glsl
src/shaders/path-tracing/: bindings.glsl  camera.glsl  common.glsl  emitter.glsl  instance.glsl  interaction.glsl  push-constant.glsl  rand.glsl  ray.glsl  records.glsl  restir_reservoir.glsl  scene-bindings.glsl  spectrum.glsl  trace.glsl  warp.glsl
src/shaders/path-tracing-hlsl/: common.hlsl
src/shaders/path-tracing-hlsl/rtx/: rgen.hlsl
src/shaders/path-tracing/bsdf/: diffuse.glsl
src/shaders/path-tracing/entry_points/: rchit.glsl  rgen-restir.glsl
src/shaders/path-tracing/integrator/: direct.glsl  path-gbuffer.glsl  path-restir.glsl  path.glsl
src/shaders/path-tracing/rtx/: rchit.glsl  rgen-diffuse.glsl  (+4 more)
(+26 files in other folders)
