[package]
name = "pt02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screen-13 = { git = "https://github.com/attackgoat/screen-13.git"}
screen-13-fx = { git = "https://github.com/attackgoat/screen-13.git"}
screen-13-egui = { git = "https://github.com/attackgoat/screen-13.git"}
#screen-13 = { path = "../screen-13"}
#screen-13-fx = { path = "../screen-13/contrib/screen-13-fx" }
#screen-13-egui = { path = "../screen-13/contrib/screen-13-egui" }
pretty_env_logger = "0.4"
egui = "0.18.0"
inline-spirv = "*"
crevice = {version = "0.12.0", features = ["glam"]}
bytemuck = "1.13.0"
tobj = "3.2.3"
anyhow = "1.0.68"
gltf = {version = "1.0.0", features = ["KHR_materials_transmission", "KHR_materials_ior", "KHR_lights_punctual"]}
image = "0.24.5"
bitflags = "1.3.2"
glam = "0.22.0"
macros = { path = "./macros" }
winit = { version = "0.26" }
shaderc = "0.8.2"
hassle-rs = "0.9.0"
