[package]
name = "rust-shaders-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#spirv-std = { git = "https://github.com/DoeringChristian/rust-gpu", branch = "u_to_ptr", features = ["glam"] }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = ["glam"]}
bytemuck = {version = "1.12.3", features = ["derive"]}

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }
